; ModuleID = '/home/carl/AnghaBench/openssl/crypto/evp/extr_keymgmt_lib.c_evp_keymgmt_importkey.c'
source_filename = "/home/carl/AnghaBench/openssl/crypto/evp/extr_keymgmt_lib.c_evp_keymgmt_importkey.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i8* (i8*, i32*)* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @evp_keymgmt_importkey(%struct.TYPE_4__* %0, i32* %1) #0 {
  %3 = alloca %struct.TYPE_4__*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i8*, align 8
  store %struct.TYPE_4__* %0, %struct.TYPE_4__** %3, align 8
  store i32* %1, i32** %4, align 8
  %6 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %7 = call i32 @EVP_KEYMGMT_provider(%struct.TYPE_4__* %6)
  %8 = call i8* @ossl_provider_ctx(i32 %7)
  store i8* %8, i8** %5, align 8
  %9 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %10 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %9, i32 0, i32 0
  %11 = load i8* (i8*, i32*)*, i8* (i8*, i32*)** %10, align 8
  %12 = load i8*, i8** %5, align 8
  %13 = load i32*, i32** %4, align 8
  %14 = call i8* %11(i8* %12, i32* %13)
  ret i8* %14
}

declare dso_local i8* @ossl_provider_ctx(i32) #1

declare dso_local i32 @EVP_KEYMGMT_provider(%struct.TYPE_4__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
